fix: switch to tiles view with overlapping tiles

--- a/src/app/core/grid/custom-tiles/color-name-tile/color-name-tile.scss
+++ b/src/app/core/grid/custom-tiles/color-name-tile/color-name-tile.scss
@@ -3,7 +3,6 @@
 :host {
 
     width: 12.75em;
-    height: 13.0625em;
 
     .tile-wrapper {
         
